# smallgrad

./: .pre-commit-config.yaml  LICENSE  README.md  dev-setup.sh  pyproject.toml
report/: references.yaml  report.typ
scripts/: assignement.py  assignment_1.py
src/autodiff_numpy/: __init__.py  nn.py  tensor.py
tests/: test_class_exercice.py  test_nn.py  test_ops.py  test_tensor.py
