[project]
name = "autodiff-numpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Theo", email = "130441797+theguega@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
]

[project.scripts]
autodiff-numpy = "autodiff_numpy:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.6",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
